<resources>
    <string name="app_name">TTS</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_write">এখানে লিখুন অথবা লিখা অন্তর্ভুক্ত করুন...</string>
    <string name="letter_count">শব্দ 0/2500</string>
    <string name="ascii">ASCII</string>
    <string name="unicode">UNICODE</string>
    <string name="text">TEXT</string>
    <string name="ssml">SSML</string>
    <string name="speed">গতি</string>
    <string name="pitch">পিচ</string>
    <string name="voice">কণ্ঠ</string>
    <string name="male">পুরুষ</string>
    <string name="female">নারী</string>
    <string name="immature">অপ্রাপ্তবয়স্ক</string>
    <string name="mature">প্রাপ্তবয়স্ক</string>
    <string name="_1x">-1x</string>
    <string name="_2x">-2x</string>
    <string name="p1x">1x</string>
    <string name="p2x">2x</string>
    <string name="_0">0</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="save">save</string>
    <string name="age">বয়স</string>
    <string name="cancel">Cancel</string>
<!--    <string name="sample_text"> সালে করাচিতে টি-টোয়েন্টিতে বাংলাদেশ </string>-->
    <string name="sample_text"> দেশে নিরাপদ সড়ক নিশ্চিত করার সর্বোচ্চ সংস্থা জাতীয় সড়ক নিরাপত্তা কাউন্সিল (এনআরএসসি)। সংস্থাটির চেয়ারম্যান সড়ক পরিবহন ও সেতুমন্ত্রী। সদস্য হলেন সরকারের সংশ্লিষ্ট সব দপ্তরের প্রতিনিধি, পরিবহন খাতের মালিক-শ্রমিক প্রতিনিধি, বিশেষজ্ঞ ও নাগরিক সমাজের প্রতিনিধিরা।
        প্রতি ছয় মাস অন্তর এনআরএসসির বৈঠক হওয়ার বাধ্যবাধকতা আছে। কিন্তু প্রায় তিন বছর ধরে এনআরএসসির বৈঠক হয় না। সড়ক পরিবহন মন্ত্রণালয়ের নথি অনুসারে, ২০১৯ সালের ৫ সেপ্টেম্বর সর্বশেষ কাউন্সিলের বৈঠক হয়।
        নিরাপদ সড়ক নিশ্চিত করতে প্রয়োজনীয় নীতি ও কর্মসূচি নেওয়ার আরেকটি গুরুত্বপূর্ণ সংস্থা হচ্ছে জাতীয় সড়ক নিরাপত্তা উপদেষ্টা পরিষদ। এটিরও প্রধান সড়ক পরিবহন ও সেতুমন্ত্রী। সরকারের প্রায় সব গুরুত্বপূর্ণ মন্ত্রণালয়ের সচিবেরা এই পরিষদের সদস্য। এই পরিষদেরও বৈঠক হয় না তিন বছরের বেশি সময় ধরে। বৈঠক হওয়ার কথা ছয় মাস পরপর। সড়ক নিরাপত্তা কাউন্সিলের আদলে সারা দেশে জেলা পর্যায়েও অনুরূপ কমিটি থাকার কথা।
        তাদের দায়িত্ব জাতীয় কাউন্সিলের মতো জেলা পর্যায়ে নিয়মিত বৈঠক করে নিরাপদ সড়ক–সংক্রান্ত সিদ্ধান্ত বাস্তবায়ন করা। কিন্তু জেলা পর্যায়ে এ ধরনের কোনো কমিটির কার্যক্রম নেই বললেই চলে।
        পরিবহন মালিক-শ্রমিক সংগঠনগুলো ধর্মঘট ডাকলে তাঁদের নিয়ে আলোচনার জন্য বৈঠক ডাকা হয়। নিরাপদ সড়কের বিষয়টি আলোচনায় আসে না। বরং কীভাবে ধর্মঘট প্রত্যাহার হবে, মালিক-শ্রমিক সংগঠনগুলোর দাবি বাস্তবায়ন নিয়েই বেশি আলোচনা হয়।
        এই পরিস্থিতিতে গতকাল শনিবার জাতীয় নিরাপদ সড়ক দিবস পালন করেছে সরকার। ২০১৭ সাল থেকে সরকারিভাবে ২২ অক্টোবর জাতীয় নিরাপদ সড়ক দিবস পালন করা হচ্ছে। এ বছর দিবসটির প্রতিপাদ্য ছিল ‘আইন মেনে সড়কে চলি, নিরাপদে ঘরে ফিরি।’
        বিশেষজ্ঞরা বলছেন, এবারের যে প্রতিপাদ্য, তা মূলত পথচারী, যাত্রী এবং সাধারণ মানুষকে লক্ষ্য করে নির্ধারণ করা হয়েছে। অর্থাৎ সাধারণ মানুষ কীভাবে সড়ক পারাপার হবে ও যাত্রীদের আচরণ কী হওয়া উচিত—এটিই মূল বিষয় ছিল। জাতীয় নিরাপদ সড়ক দিবস উপলক্ষে সড়ক পরিবহন মন্ত্রণালয়ের অধীন বাংলাদেশ সড়ক পরিবহন কর্তৃপক্ষের (বিআরটিএ) কর্মসূচি শোভাযাত্রা ও পথচারীদের সচেতনতা সৃষ্টিতে সীমাবদ্ধ ছিল।
        সাকিব আল হাসান সংবাদ সম্মেলন করে গেলেন হাসতে হাসতে এবং হাসাতে হাসাতে। হাসলেন কখনো প্রশ্ন শুনে, কখনো উত্তর দিতে গিয়ে। তাতে হাসি সংক্রমিত হয়েছে অন্যদের মধ্যেও।
        তবে হাসি-ঠাট্টার ফাঁক-ফোকরে সাকিবের কথায় যেটি বারবার ঝলক দিয়ে গেল, তার নাম আত্মবিশ্বাস। আত্মবিশ্বাসী সাকিব যেন সতীর্থদের মধ্যে পরোক্ষে একটা প্রতিযোগিতাও বাঁধিয়ে দিলেন সিডনি ক্রিকেট গ্রাউন্ডে (এসসিজি) তাঁর প্রথম সংবাদ সম্মেলনে। দক্ষিণ আফ্রিকার বিপক্ষে আগামীকালের ম্যাচটা বাংলাদেশের কারও না কারও ‘হিরো’ হওয়ার সুযোগ।
        কে হবেন সেই ‘হিরো’?এসসিজির এই ম্যাচে বাংলাদেশ যা-ই করবে, সেটাই হবে প্রথম। যার বলে দক্ষিণ আফ্রিকা প্রথম উইকেট হারাবে তিনি পাবেন এসসিজিতে বাংলাদেশের হয়ে প্রথম উইকেট। যিনি প্রথম বাউন্ডারি মারবেন, তাঁর হবে প্রথম বাউন্ডারি। আর যিনি সবার আগে আউট হবেন,
        তিনিও হবেন ১৭৪ বছরের ইতিহাসের স্বাক্ষী এসসিজিতে প্রথম আউট হওয়া বাংলাদেশি ব্যাটসম্যান।এসসিজির ‘ওয়াক অব অনারে’ বাংলাদেশের প্রথমদের নাম উঠবে না জানা কথা।
        স্টেডিয়ামে ঢুকতেই সিঁড়ির দেয়ালে সাজানো মেটাল প্লেটগুলোতে খেলার মাঠের যেসব কীর্তির ইতিহাস ফুটিয়ে তোলা হয়েছে, তার সবই সিডনির ক্রীড়া কিংবদন্তীদের। সেখানে বাংলাদেশ আসবেই–বা কেন!
        তবে অধিনায়কের আহ্বানে সাড়া দিয়ে এসসিজিতে বাংলাদেশের প্রথম ম্যাচে যদি সত্যিই নায়ক হয়ে উঠতে পারেন কেউ, মাঠ ছাড়ার সময় নিশ্চিত সতীর্থদের একটা ‘ওয়াক অব অনার’ তিনি পাবেন।
        সংবাদ সম্মেলনে সাকিব তাঁর আশাটা প্রকাশ করলেন হাসিমুখে, ‘আগামীকাল আমাদের জন্য আরেকটা সুযোগ। আমাদের ১১ জনে যারা খেলবে, তাদের মধ্যে একজনের হিরো হওয়ার সম্ভাবনা আছে।
        তো ওই হিরোটা কে হবে, সেটাই দেখার।’ টি-টোয়েন্টি ‘মোমেন্টামে’র খেলা। সাকিবের টি-টোয়েন্টি জয়ের ফর্মুলা হলো, সেই ‘মোমেন্টাম’টা ধরতে হবে এবং সেটি ধরেই রাখতে হবে। আর টি-টোয়েন্টি ম্যাচ যেহেতু একজনের পারফরম্যান্স দিয়েও জেতা সম্ভব,
        কারও নায়ক হওয়ার সম্ভাবনাটা সেখানেই বেশি দেখেন সাকিব, ‘টি-টোয়েন্টিতে বেশি পারফরমার থাকার সুযোগ নেই। কম পারফরমার থাকবে কিন্তু ওদের পারফরম্যান্স একটু বড় হতে হয়। ওপেনারদের সুযোগ আছে ২০ ওভার ব্যাটিং করার।
        কেন তারা পারবে না? আমি বিশ্বাস করি, তারা করতে পারবে। কিংবা আমাদের বোলাররা আগের দিন যেভাবে বোলিং করেছে, কেন আমরা আবার ১০ উইকেট নিতে পারব না? সাকিবের এই প্রশ্ন আসলে সতীর্থদের উদ্দেশ্যেই। প্রশ্নের ইতিবাচক উত্তর খুঁজে পেতে তাঁদের অনুপ্রাণিত করছেন অধিনায়ক নানা ভাবে। একবার যেমন বললেন,
        দক্ষিণ আফ্রিকার বিপক্ষে জয় পাওয়াটা খুবই গুরুত্বপূর্ণ। এটা এমন একটা ম্যাচ, যেটা আমরা যদি জিতে যাই। আমাদের যে ভালো কিছু করার সামর্থ্য আছে, আমরা সেটা প্রমাণ করার কাছাকাছি চলে যাব।
        আগের ম্যাচে দুর্দান্ত বোলিং করে ৪ উইকেট নিয়েছেন তাসকিন আহমেদ, মাশরাফি বিন মুর্তজার পর সাকিবের চোখে যিনি বাংলাদেশ দলের পেস বোলিংয়ের নেতা হয়ে উঠেছেন।
        নায়ক হওয়ার আমন্ত্রণটা সবার জন্য উম্মুক্ত থাকলেও সাকিবের আশাটা তাসকিনের মতো যারা ভালো খেলছেন, তাঁদের কাছেই বেশি। তবে নতুন কেউ ‘হিরো’ হতে চাইলে তাঁদেরও আলিঙ্গন করে নেবেন অধিনায়ক, ‘দলের কেউ একজন হয়তো ধারাবাহিকভাবে ভালো খেলছে
        সেই দলগুলোই হয়তো দীর্ঘমেয়াদে ভালো খেলে। আমরা ও রকমই পারফরম্যান্স চাই। এর ভেতরে যদি দু-একটা ব্যতিক্রমী পারফরম্যান্সও হয়, সেটাকে আমরা সাদরে গ্রহণ করব।
        আমরা চাই যে প্রতি ম্যাচেই এ রকম এক-দুইটা ব্যতিক্রমী পারফরম্যান্স হোক, যেটা খেলার মোড় ঘুরিয়ে দেয় অনেক বেশি। প্রায় ৬০ হাজার বাংলাদেশির শহর সিডনির মাঠে লাল-সবুজ পতাকার অভাব থাকার কথা নয়। ম্যাচটা যেন দলের সবাই উপভোগ করেন, সে জন্য সেটাকেও বড় অনুপ্রেরণা হিসেবে দেখছেন সাকিব,
        ‘আমাদের জন্য গুরুত্বপূর্ণ হলো আমরা খেলাটা কতটা উপভোগ করতে পারছি তা। সিডনিতে যেহেতু সবচেয়ে বাংলাদেশি, বেশ বড় একটা দর্শক থাকবে আমাদের পক্ষে। তাদের সমর্থন কাজে লাগিয়ে কীভাবে আরও ভালো পারফর্ম করতে পারি,
        সেটাই গুরুত্বপূর্ণ। তাদের সমর্থনের প্রতিদানটা যেন আমরা দিতে পারি। সে জন্য প্রধান শর্ত ওটাই—কারও নায়ক হয়ে উঠতে হবে। সিডনি ক্রিকেট গ্রাউন্ডে কে হবেন সাকিবের ‘হিরো’?</string>
</resources>